parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     vacio -> <empty>
Rule 2     programa -> PROGRAM ID PUNTO_COMA clases decVar funciones main
Rule 3     main -> MAIN PARENTESIS_I PARENTESIS_D bloque
Rule 4     bloque -> LLAVE_I estatutos LLAVE_D
Rule 5     estatutos -> estatuto estatutos
Rule 6     estatutos -> vacio
Rule 7     clases -> CLASS ID heren LLAVE_I contenido LLAVE_D PUNTO_COMA nuevacl
Rule 8     clases -> vacio
Rule 9     heren -> MENOR_QUE INHERITS MAYOR_QUE
Rule 10    heren -> vacio
Rule 11    contenido -> attr met
Rule 12    attr -> decVar
Rule 13    attr -> vacio
Rule 14    met -> funciones
Rule 15    met -> vacio
Rule 16    nuevacl -> clases
Rule 17    nuevacl -> vacio
Rule 18    decVar -> VAR tipo PUNTO_COMA e
Rule 19    decVar -> vacio
Rule 20    tipo -> tiposimple a b
Rule 21    tipo -> tipoCompuesto c d
Rule 22    a -> ID
Rule 23    a -> ID CORCHETE_I CTEINT CORCHETE_D
Rule 24    a -> ID CORCHETE_I CTEINT COMA CTEINT CORCHETE_D
Rule 25    b -> COMA a b
Rule 26    b -> vacio
Rule 27    c -> ID
Rule 28    d -> COMA c d
Rule 29    d -> vacio
Rule 30    e -> decVar
Rule 31    e -> vacio
Rule 32    tiposimple -> INT
Rule 33    tiposimple -> FLOAT
Rule 34    tiposimple -> CHAR
Rule 35    tipoCompuesto -> ID
Rule 36    tipoCompuesto -> DATAFRAME
Rule 37    tipoCompuesto -> FILE
Rule 38    funciones -> FUNC f ID PARENTESIS_I param PARENTESIS_D LLAVE_I decVar estatutos LLAVE_D z
Rule 39    funciones -> vacio
Rule 40    f -> tiposimple
Rule 41    f -> VOID
Rule 42    z -> funciones
Rule 43    z -> vacio
Rule 44    param -> tiposimple ID g
Rule 45    param -> vacio
Rule 46    g -> COMA param
Rule 47    g -> vacio
Rule 48    estatuto -> asignacion
Rule 49    estatuto -> llamadaVoid
Rule 50    estatuto -> retorno
Rule 51    estatuto -> lectura
Rule 52    estatuto -> escritura
Rule 53    estatuto -> condicion
Rule 54    estatuto -> cicloWhile
Rule 55    estatuto -> cicloFor
Rule 56    variable -> ID h
Rule 57    h -> CORCHETE_I expresion CORCHETE_D
Rule 58    h -> CORCHETE_I expresion COMA expresion CORCHETE_D
Rule 59    h -> vacio
Rule 60    asignacion -> variable IGUAL expresion PUNTO_COMA
Rule 61    llamadaVoid -> ID PARENTESIS_I expresion I PARENTESIS_D
Rule 62    I -> COMA expresion I
Rule 63    I -> vacio
Rule 64    lectura -> READ variable
Rule 65    retorno -> RETURN expresion PUNTO_COMA
Rule 66    escritura -> PRINT PARENTESIS_I j
Rule 67    j -> CTESTRING k
Rule 68    j -> expresion k
Rule 69    k -> COMA j
Rule 70    k -> PARENTESIS_D PUNTO_COMA
Rule 71    condicion -> IF PARENTESIS_I expresion PARENTESIS_D bloque l
Rule 72    l -> ELSE bloque
Rule 73    l -> vacio
Rule 74    cicloWhile -> WHILE PARENTESIS_I expresion PARENTESIS_D bloque
Rule 75    cicloFor -> FOR variable IGUAL expresion UNTIL bloque
Rule 76    expresion -> exp m
Rule 77    m -> MAYOR_QUE exp
Rule 78    m -> MENOR_QUE exp
Rule 79    m -> NO_IGUAL exp
Rule 80    m -> vacio
Rule 81    exp -> termino n
Rule 82    n -> MAS exp
Rule 83    n -> MENOS exp
Rule 84    n -> vacio
Rule 85    termino -> factor o
Rule 86    o -> POR termino
Rule 87    o -> ENTRE termino
Rule 88    o -> vacio
Rule 89    factor -> varcte
Rule 90    factor -> ID p
Rule 91    factor -> PARENTESIS_I expresion PARENTESIS_D
Rule 92    factor -> MAS varcte
Rule 93    factor -> MENOS varcte
Rule 94    p -> CORCHETE_I expresion CORCHETE_D
Rule 95    p -> CORCHETE_I expresion COMA expresion CORCHETE_D
Rule 96    p -> PARENTESIS_I expresion q PARENTESIS_D
Rule 97    p -> PUNTO ID
Rule 98    p -> PUNTO ID PARENTESIS_I r PARENTESIS_D
Rule 99    p -> vacio
Rule 100   q -> COMA expresion q
Rule 101   q -> vacio
Rule 102   r -> varcte s
Rule 103   r -> vacio
Rule 104   s -> COMA varcte s
Rule 105   s -> vacio
Rule 106   varcte -> CTECHAR
Rule 107   varcte -> CTEINT
Rule 108   varcte -> CTEFLOAT

Terminals, with rules where they appear

CHAR                 : 34
CLASS                : 7
COMA                 : 24 25 28 46 58 62 69 95 100 104
CORCHETE_D           : 23 24 57 58 94 95
CORCHETE_I           : 23 24 57 58 94 95
CTECHAR              : 106
CTEFLOAT             : 108
CTEINT               : 23 24 24 107
CTESTRING            : 67
DATAFRAME            : 36
ELSE                 : 72
ENTRE                : 87
FILE                 : 37
FLOAT                : 33
FOR                  : 75
FUNC                 : 38
ID                   : 2 7 22 23 24 27 35 38 44 56 61 90 97 98
IF                   : 71
IGUAL                : 60 75
INHERITS             : 9
INT                  : 32
LLAVE_D              : 4 7 38
LLAVE_I              : 4 7 38
MAIN                 : 3
MAS                  : 82 92
MAYOR_QUE            : 9 77
MENOR_QUE            : 9 78
MENOS                : 83 93
NO_IGUAL             : 79
PARENTESIS_D         : 3 38 61 70 71 74 91 96 98
PARENTESIS_I         : 3 38 61 66 71 74 91 96 98
POR                  : 86
PRINT                : 66
PROGRAM              : 2
PUNTO                : 97 98
PUNTO_COMA           : 2 7 18 60 65 70
READ                 : 64
RETURN               : 65
UNTIL                : 75
VAR                  : 18
VOID                 : 41
WHILE                : 74
error                : 

Nonterminals, with rules where they appear

I                    : 61 62
a                    : 20 25
asignacion           : 48
attr                 : 11
b                    : 20 25
bloque               : 3 71 72 74 75
c                    : 21 28
cicloFor             : 55
cicloWhile           : 54
clases               : 2 16
condicion            : 53
contenido            : 7
d                    : 21 28
decVar               : 2 12 30 38
e                    : 18
escritura            : 52
estatuto             : 5
estatutos            : 4 5 38
exp                  : 76 77 78 79 82 83
expresion            : 57 58 58 60 61 62 65 68 71 74 75 91 94 95 95 96 100
f                    : 38
factor               : 85
funciones            : 2 14 42
g                    : 44
h                    : 56
heren                : 7
j                    : 66 69
k                    : 67 68
l                    : 71
lectura              : 51
llamadaVoid          : 49
m                    : 76
main                 : 2
met                  : 11
n                    : 81
nuevacl              : 7
o                    : 85
p                    : 90
param                : 38 46
programa             : 0
q                    : 96 100
r                    : 98
retorno              : 50
s                    : 102 104
termino              : 81 86 87
tipo                 : 18
tipoCompuesto        : 21
tiposimple           : 20 40 44
vacio                : 6 8 10 13 15 17 19 26 29 31 39 43 45 47 59 63 73 80 84 88 99 101 103 105
varcte               : 89 92 93 102 104
variable             : 60 64 75
z                    : 38

Parsing method: LALR

state 0

    (0) S' -> . programa
    (2) programa -> . PROGRAM ID PUNTO_COMA clases decVar funciones main

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (2) programa -> PROGRAM . ID PUNTO_COMA clases decVar funciones main

    ID              shift and go to state 3


state 3

    (2) programa -> PROGRAM ID . PUNTO_COMA clases decVar funciones main

    PUNTO_COMA      shift and go to state 4


state 4

    (2) programa -> PROGRAM ID PUNTO_COMA . clases decVar funciones main
    (7) clases -> . CLASS ID heren LLAVE_I contenido LLAVE_D PUNTO_COMA nuevacl
    (8) clases -> . vacio
    (1) vacio -> .

    CLASS           shift and go to state 6
    VAR             reduce using rule 1 (vacio -> .)
    FUNC            reduce using rule 1 (vacio -> .)
    MAIN            reduce using rule 1 (vacio -> .)

    clases                         shift and go to state 5
    vacio                          shift and go to state 7

state 5

    (2) programa -> PROGRAM ID PUNTO_COMA clases . decVar funciones main
    (18) decVar -> . VAR tipo PUNTO_COMA e
    (19) decVar -> . vacio
    (1) vacio -> .

    VAR             shift and go to state 9
    FUNC            reduce using rule 1 (vacio -> .)
    MAIN            reduce using rule 1 (vacio -> .)

    decVar                         shift and go to state 8
    vacio                          shift and go to state 10

state 6

    (7) clases -> CLASS . ID heren LLAVE_I contenido LLAVE_D PUNTO_COMA nuevacl

    ID              shift and go to state 11


state 7

    (8) clases -> vacio .

    VAR             reduce using rule 8 (clases -> vacio .)
    FUNC            reduce using rule 8 (clases -> vacio .)
    MAIN            reduce using rule 8 (clases -> vacio .)


state 8

    (2) programa -> PROGRAM ID PUNTO_COMA clases decVar . funciones main
    (38) funciones -> . FUNC f ID PARENTESIS_I param PARENTESIS_D LLAVE_I decVar estatutos LLAVE_D z
    (39) funciones -> . vacio
    (1) vacio -> .

    FUNC            shift and go to state 13
    MAIN            reduce using rule 1 (vacio -> .)

    funciones                      shift and go to state 12
    vacio                          shift and go to state 14

state 9

    (18) decVar -> VAR . tipo PUNTO_COMA e
    (20) tipo -> . tiposimple a b
    (21) tipo -> . tipoCompuesto c d
    (32) tiposimple -> . INT
    (33) tiposimple -> . FLOAT
    (34) tiposimple -> . CHAR
    (35) tipoCompuesto -> . ID
    (36) tipoCompuesto -> . DATAFRAME
    (37) tipoCompuesto -> . FILE

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20
    ID              shift and go to state 21
    DATAFRAME       shift and go to state 22
    FILE            shift and go to state 23

    tipo                           shift and go to state 15
    tiposimple                     shift and go to state 16
    tipoCompuesto                  shift and go to state 17

state 10

    (19) decVar -> vacio .

    FUNC            reduce using rule 19 (decVar -> vacio .)
    MAIN            reduce using rule 19 (decVar -> vacio .)
    ID              reduce using rule 19 (decVar -> vacio .)
    RETURN          reduce using rule 19 (decVar -> vacio .)
    READ            reduce using rule 19 (decVar -> vacio .)
    PRINT           reduce using rule 19 (decVar -> vacio .)
    IF              reduce using rule 19 (decVar -> vacio .)
    WHILE           reduce using rule 19 (decVar -> vacio .)
    FOR             reduce using rule 19 (decVar -> vacio .)
    LLAVE_D         reduce using rule 19 (decVar -> vacio .)


state 11

    (7) clases -> CLASS ID . heren LLAVE_I contenido LLAVE_D PUNTO_COMA nuevacl
    (9) heren -> . MENOR_QUE INHERITS MAYOR_QUE
    (10) heren -> . vacio
    (1) vacio -> .

    MENOR_QUE       shift and go to state 25
    LLAVE_I         reduce using rule 1 (vacio -> .)

    heren                          shift and go to state 24
    vacio                          shift and go to state 26

state 12

    (2) programa -> PROGRAM ID PUNTO_COMA clases decVar funciones . main
    (3) main -> . MAIN PARENTESIS_I PARENTESIS_D bloque

    MAIN            shift and go to state 28

    main                           shift and go to state 27

state 13

    (38) funciones -> FUNC . f ID PARENTESIS_I param PARENTESIS_D LLAVE_I decVar estatutos LLAVE_D z
    (40) f -> . tiposimple
    (41) f -> . VOID
    (32) tiposimple -> . INT
    (33) tiposimple -> . FLOAT
    (34) tiposimple -> . CHAR

    VOID            shift and go to state 31
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20

    f                              shift and go to state 29
    tiposimple                     shift and go to state 30

state 14

    (39) funciones -> vacio .

    MAIN            reduce using rule 39 (funciones -> vacio .)


state 15

    (18) decVar -> VAR tipo . PUNTO_COMA e

    PUNTO_COMA      shift and go to state 32


state 16

    (20) tipo -> tiposimple . a b
    (22) a -> . ID
    (23) a -> . ID CORCHETE_I CTEINT CORCHETE_D
    (24) a -> . ID CORCHETE_I CTEINT COMA CTEINT CORCHETE_D

    ID              shift and go to state 34

    a                              shift and go to state 33

state 17

    (21) tipo -> tipoCompuesto . c d
    (27) c -> . ID

    ID              shift and go to state 36

    c                              shift and go to state 35

state 18

    (32) tiposimple -> INT .

    ID              reduce using rule 32 (tiposimple -> INT .)


state 19

    (33) tiposimple -> FLOAT .

    ID              reduce using rule 33 (tiposimple -> FLOAT .)


state 20

    (34) tiposimple -> CHAR .

    ID              reduce using rule 34 (tiposimple -> CHAR .)


state 21

    (35) tipoCompuesto -> ID .

    ID              reduce using rule 35 (tipoCompuesto -> ID .)


state 22

    (36) tipoCompuesto -> DATAFRAME .

    ID              reduce using rule 36 (tipoCompuesto -> DATAFRAME .)


state 23

    (37) tipoCompuesto -> FILE .

    ID              reduce using rule 37 (tipoCompuesto -> FILE .)


state 24

    (7) clases -> CLASS ID heren . LLAVE_I contenido LLAVE_D PUNTO_COMA nuevacl

    LLAVE_I         shift and go to state 37


state 25

    (9) heren -> MENOR_QUE . INHERITS MAYOR_QUE

    INHERITS        shift and go to state 38


state 26

    (10) heren -> vacio .

    LLAVE_I         reduce using rule 10 (heren -> vacio .)


state 27

    (2) programa -> PROGRAM ID PUNTO_COMA clases decVar funciones main .

    $end            reduce using rule 2 (programa -> PROGRAM ID PUNTO_COMA clases decVar funciones main .)


state 28

    (3) main -> MAIN . PARENTESIS_I PARENTESIS_D bloque

    PARENTESIS_I    shift and go to state 39


state 29

    (38) funciones -> FUNC f . ID PARENTESIS_I param PARENTESIS_D LLAVE_I decVar estatutos LLAVE_D z

    ID              shift and go to state 40


state 30

    (40) f -> tiposimple .

    ID              reduce using rule 40 (f -> tiposimple .)


state 31

    (41) f -> VOID .

    ID              reduce using rule 41 (f -> VOID .)


state 32

    (18) decVar -> VAR tipo PUNTO_COMA . e
    (30) e -> . decVar
    (31) e -> . vacio
    (18) decVar -> . VAR tipo PUNTO_COMA e
    (19) decVar -> . vacio
    (1) vacio -> .

    VAR             shift and go to state 9
    FUNC            reduce using rule 1 (vacio -> .)
    MAIN            reduce using rule 1 (vacio -> .)
    LLAVE_D         reduce using rule 1 (vacio -> .)
    ID              reduce using rule 1 (vacio -> .)
    RETURN          reduce using rule 1 (vacio -> .)
    READ            reduce using rule 1 (vacio -> .)
    PRINT           reduce using rule 1 (vacio -> .)
    IF              reduce using rule 1 (vacio -> .)
    WHILE           reduce using rule 1 (vacio -> .)
    FOR             reduce using rule 1 (vacio -> .)

    e                              shift and go to state 41
    decVar                         shift and go to state 42
    vacio                          shift and go to state 43

state 33

    (20) tipo -> tiposimple a . b
    (25) b -> . COMA a b
    (26) b -> . vacio
    (1) vacio -> .

    COMA            shift and go to state 45
    PUNTO_COMA      reduce using rule 1 (vacio -> .)

    b                              shift and go to state 44
    vacio                          shift and go to state 46

state 34

    (22) a -> ID .
    (23) a -> ID . CORCHETE_I CTEINT CORCHETE_D
    (24) a -> ID . CORCHETE_I CTEINT COMA CTEINT CORCHETE_D

    COMA            reduce using rule 22 (a -> ID .)
    PUNTO_COMA      reduce using rule 22 (a -> ID .)
    CORCHETE_I      shift and go to state 47


state 35

    (21) tipo -> tipoCompuesto c . d
    (28) d -> . COMA c d
    (29) d -> . vacio
    (1) vacio -> .

    COMA            shift and go to state 49
    PUNTO_COMA      reduce using rule 1 (vacio -> .)

    d                              shift and go to state 48
    vacio                          shift and go to state 50

state 36

    (27) c -> ID .

    COMA            reduce using rule 27 (c -> ID .)
    PUNTO_COMA      reduce using rule 27 (c -> ID .)


state 37

    (7) clases -> CLASS ID heren LLAVE_I . contenido LLAVE_D PUNTO_COMA nuevacl
    (11) contenido -> . attr met
    (12) attr -> . decVar
    (13) attr -> . vacio
    (18) decVar -> . VAR tipo PUNTO_COMA e
    (19) decVar -> . vacio
    (1) vacio -> .

    VAR             shift and go to state 9
    FUNC            reduce using rule 1 (vacio -> .)
    LLAVE_D         reduce using rule 1 (vacio -> .)

    contenido                      shift and go to state 51
    attr                           shift and go to state 52
    decVar                         shift and go to state 53
    vacio                          shift and go to state 54

state 38

    (9) heren -> MENOR_QUE INHERITS . MAYOR_QUE

    MAYOR_QUE       shift and go to state 55


state 39

    (3) main -> MAIN PARENTESIS_I . PARENTESIS_D bloque

    PARENTESIS_D    shift and go to state 56


state 40

    (38) funciones -> FUNC f ID . PARENTESIS_I param PARENTESIS_D LLAVE_I decVar estatutos LLAVE_D z

    PARENTESIS_I    shift and go to state 57


state 41

    (18) decVar -> VAR tipo PUNTO_COMA e .

    FUNC            reduce using rule 18 (decVar -> VAR tipo PUNTO_COMA e .)
    MAIN            reduce using rule 18 (decVar -> VAR tipo PUNTO_COMA e .)
    LLAVE_D         reduce using rule 18 (decVar -> VAR tipo PUNTO_COMA e .)
    ID              reduce using rule 18 (decVar -> VAR tipo PUNTO_COMA e .)
    RETURN          reduce using rule 18 (decVar -> VAR tipo PUNTO_COMA e .)
    READ            reduce using rule 18 (decVar -> VAR tipo PUNTO_COMA e .)
    PRINT           reduce using rule 18 (decVar -> VAR tipo PUNTO_COMA e .)
    IF              reduce using rule 18 (decVar -> VAR tipo PUNTO_COMA e .)
    WHILE           reduce using rule 18 (decVar -> VAR tipo PUNTO_COMA e .)
    FOR             reduce using rule 18 (decVar -> VAR tipo PUNTO_COMA e .)


state 42

    (30) e -> decVar .

    FUNC            reduce using rule 30 (e -> decVar .)
    MAIN            reduce using rule 30 (e -> decVar .)
    LLAVE_D         reduce using rule 30 (e -> decVar .)
    ID              reduce using rule 30 (e -> decVar .)
    RETURN          reduce using rule 30 (e -> decVar .)
    READ            reduce using rule 30 (e -> decVar .)
    PRINT           reduce using rule 30 (e -> decVar .)
    IF              reduce using rule 30 (e -> decVar .)
    WHILE           reduce using rule 30 (e -> decVar .)
    FOR             reduce using rule 30 (e -> decVar .)


state 43

    (31) e -> vacio .
    (19) decVar -> vacio .

  ! reduce/reduce conflict for FUNC resolved using rule 19 (decVar -> vacio .)
  ! reduce/reduce conflict for MAIN resolved using rule 19 (decVar -> vacio .)
  ! reduce/reduce conflict for LLAVE_D resolved using rule 19 (decVar -> vacio .)
  ! reduce/reduce conflict for ID resolved using rule 19 (decVar -> vacio .)
  ! reduce/reduce conflict for RETURN resolved using rule 19 (decVar -> vacio .)
  ! reduce/reduce conflict for READ resolved using rule 19 (decVar -> vacio .)
  ! reduce/reduce conflict for PRINT resolved using rule 19 (decVar -> vacio .)
  ! reduce/reduce conflict for IF resolved using rule 19 (decVar -> vacio .)
  ! reduce/reduce conflict for WHILE resolved using rule 19 (decVar -> vacio .)
  ! reduce/reduce conflict for FOR resolved using rule 19 (decVar -> vacio .)
    FUNC            reduce using rule 19 (decVar -> vacio .)
    MAIN            reduce using rule 19 (decVar -> vacio .)
    LLAVE_D         reduce using rule 19 (decVar -> vacio .)
    ID              reduce using rule 19 (decVar -> vacio .)
    RETURN          reduce using rule 19 (decVar -> vacio .)
    READ            reduce using rule 19 (decVar -> vacio .)
    PRINT           reduce using rule 19 (decVar -> vacio .)
    IF              reduce using rule 19 (decVar -> vacio .)
    WHILE           reduce using rule 19 (decVar -> vacio .)
    FOR             reduce using rule 19 (decVar -> vacio .)

  ! FUNC            [ reduce using rule 31 (e -> vacio .) ]
  ! MAIN            [ reduce using rule 31 (e -> vacio .) ]
  ! LLAVE_D         [ reduce using rule 31 (e -> vacio .) ]
  ! ID              [ reduce using rule 31 (e -> vacio .) ]
  ! RETURN          [ reduce using rule 31 (e -> vacio .) ]
  ! READ            [ reduce using rule 31 (e -> vacio .) ]
  ! PRINT           [ reduce using rule 31 (e -> vacio .) ]
  ! IF              [ reduce using rule 31 (e -> vacio .) ]
  ! WHILE           [ reduce using rule 31 (e -> vacio .) ]
  ! FOR             [ reduce using rule 31 (e -> vacio .) ]


state 44

    (20) tipo -> tiposimple a b .

    PUNTO_COMA      reduce using rule 20 (tipo -> tiposimple a b .)


state 45

    (25) b -> COMA . a b
    (22) a -> . ID
    (23) a -> . ID CORCHETE_I CTEINT CORCHETE_D
    (24) a -> . ID CORCHETE_I CTEINT COMA CTEINT CORCHETE_D

    ID              shift and go to state 34

    a                              shift and go to state 58

state 46

    (26) b -> vacio .

    PUNTO_COMA      reduce using rule 26 (b -> vacio .)


state 47

    (23) a -> ID CORCHETE_I . CTEINT CORCHETE_D
    (24) a -> ID CORCHETE_I . CTEINT COMA CTEINT CORCHETE_D

    CTEINT          shift and go to state 59


state 48

    (21) tipo -> tipoCompuesto c d .

    PUNTO_COMA      reduce using rule 21 (tipo -> tipoCompuesto c d .)


state 49

    (28) d -> COMA . c d
    (27) c -> . ID

    ID              shift and go to state 36

    c                              shift and go to state 60

state 50

    (29) d -> vacio .

    PUNTO_COMA      reduce using rule 29 (d -> vacio .)


state 51

    (7) clases -> CLASS ID heren LLAVE_I contenido . LLAVE_D PUNTO_COMA nuevacl

    LLAVE_D         shift and go to state 61


state 52

    (11) contenido -> attr . met
    (14) met -> . funciones
    (15) met -> . vacio
    (38) funciones -> . FUNC f ID PARENTESIS_I param PARENTESIS_D LLAVE_I decVar estatutos LLAVE_D z
    (39) funciones -> . vacio
    (1) vacio -> .

    FUNC            shift and go to state 13
    LLAVE_D         reduce using rule 1 (vacio -> .)

    met                            shift and go to state 62
    funciones                      shift and go to state 63
    vacio                          shift and go to state 64

state 53

    (12) attr -> decVar .

    FUNC            reduce using rule 12 (attr -> decVar .)
    LLAVE_D         reduce using rule 12 (attr -> decVar .)


state 54

    (13) attr -> vacio .
    (19) decVar -> vacio .

  ! reduce/reduce conflict for FUNC resolved using rule 13 (attr -> vacio .)
  ! reduce/reduce conflict for LLAVE_D resolved using rule 13 (attr -> vacio .)
    FUNC            reduce using rule 13 (attr -> vacio .)
    LLAVE_D         reduce using rule 13 (attr -> vacio .)

  ! FUNC            [ reduce using rule 19 (decVar -> vacio .) ]
  ! LLAVE_D         [ reduce using rule 19 (decVar -> vacio .) ]


state 55

    (9) heren -> MENOR_QUE INHERITS MAYOR_QUE .

    LLAVE_I         reduce using rule 9 (heren -> MENOR_QUE INHERITS MAYOR_QUE .)


state 56

    (3) main -> MAIN PARENTESIS_I PARENTESIS_D . bloque
    (4) bloque -> . LLAVE_I estatutos LLAVE_D

    LLAVE_I         shift and go to state 66

    bloque                         shift and go to state 65

state 57

    (38) funciones -> FUNC f ID PARENTESIS_I . param PARENTESIS_D LLAVE_I decVar estatutos LLAVE_D z
    (44) param -> . tiposimple ID g
    (45) param -> . vacio
    (32) tiposimple -> . INT
    (33) tiposimple -> . FLOAT
    (34) tiposimple -> . CHAR
    (1) vacio -> .

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20
    PARENTESIS_D    reduce using rule 1 (vacio -> .)

    param                          shift and go to state 67
    tiposimple                     shift and go to state 68
    vacio                          shift and go to state 69

state 58

    (25) b -> COMA a . b
    (25) b -> . COMA a b
    (26) b -> . vacio
    (1) vacio -> .

    COMA            shift and go to state 45
    PUNTO_COMA      reduce using rule 1 (vacio -> .)

    b                              shift and go to state 70
    vacio                          shift and go to state 46

state 59

    (23) a -> ID CORCHETE_I CTEINT . CORCHETE_D
    (24) a -> ID CORCHETE_I CTEINT . COMA CTEINT CORCHETE_D

    CORCHETE_D      shift and go to state 71
    COMA            shift and go to state 72


state 60

    (28) d -> COMA c . d
    (28) d -> . COMA c d
    (29) d -> . vacio
    (1) vacio -> .

    COMA            shift and go to state 49
    PUNTO_COMA      reduce using rule 1 (vacio -> .)

    d                              shift and go to state 73
    vacio                          shift and go to state 50

state 61

    (7) clases -> CLASS ID heren LLAVE_I contenido LLAVE_D . PUNTO_COMA nuevacl

    PUNTO_COMA      shift and go to state 74


state 62

    (11) contenido -> attr met .

    LLAVE_D         reduce using rule 11 (contenido -> attr met .)


state 63

    (14) met -> funciones .

    LLAVE_D         reduce using rule 14 (met -> funciones .)


state 64

    (15) met -> vacio .
    (39) funciones -> vacio .

  ! reduce/reduce conflict for LLAVE_D resolved using rule 15 (met -> vacio .)
    LLAVE_D         reduce using rule 15 (met -> vacio .)

  ! LLAVE_D         [ reduce using rule 39 (funciones -> vacio .) ]


state 65

    (3) main -> MAIN PARENTESIS_I PARENTESIS_D bloque .

    $end            reduce using rule 3 (main -> MAIN PARENTESIS_I PARENTESIS_D bloque .)


state 66

    (4) bloque -> LLAVE_I . estatutos LLAVE_D
    (5) estatutos -> . estatuto estatutos
    (6) estatutos -> . vacio
    (48) estatuto -> . asignacion
    (49) estatuto -> . llamadaVoid
    (50) estatuto -> . retorno
    (51) estatuto -> . lectura
    (52) estatuto -> . escritura
    (53) estatuto -> . condicion
    (54) estatuto -> . cicloWhile
    (55) estatuto -> . cicloFor
    (1) vacio -> .
    (60) asignacion -> . variable IGUAL expresion PUNTO_COMA
    (61) llamadaVoid -> . ID PARENTESIS_I expresion I PARENTESIS_D
    (65) retorno -> . RETURN expresion PUNTO_COMA
    (64) lectura -> . READ variable
    (66) escritura -> . PRINT PARENTESIS_I j
    (71) condicion -> . IF PARENTESIS_I expresion PARENTESIS_D bloque l
    (74) cicloWhile -> . WHILE PARENTESIS_I expresion PARENTESIS_D bloque
    (75) cicloFor -> . FOR variable IGUAL expresion UNTIL bloque
    (56) variable -> . ID h

    LLAVE_D         reduce using rule 1 (vacio -> .)
    ID              shift and go to state 87
    RETURN          shift and go to state 88
    READ            shift and go to state 89
    PRINT           shift and go to state 90
    IF              shift and go to state 91
    WHILE           shift and go to state 92
    FOR             shift and go to state 93

    estatutos                      shift and go to state 75
    estatuto                       shift and go to state 76
    vacio                          shift and go to state 77
    asignacion                     shift and go to state 78
    llamadaVoid                    shift and go to state 79
    retorno                        shift and go to state 80
    lectura                        shift and go to state 81
    escritura                      shift and go to state 82
    condicion                      shift and go to state 83
    cicloWhile                     shift and go to state 84
    cicloFor                       shift and go to state 85
    variable                       shift and go to state 86

state 67

    (38) funciones -> FUNC f ID PARENTESIS_I param . PARENTESIS_D LLAVE_I decVar estatutos LLAVE_D z

    PARENTESIS_D    shift and go to state 94


state 68

    (44) param -> tiposimple . ID g

    ID              shift and go to state 95


state 69

    (45) param -> vacio .

    PARENTESIS_D    reduce using rule 45 (param -> vacio .)


state 70

    (25) b -> COMA a b .

    PUNTO_COMA      reduce using rule 25 (b -> COMA a b .)


state 71

    (23) a -> ID CORCHETE_I CTEINT CORCHETE_D .

    COMA            reduce using rule 23 (a -> ID CORCHETE_I CTEINT CORCHETE_D .)
    PUNTO_COMA      reduce using rule 23 (a -> ID CORCHETE_I CTEINT CORCHETE_D .)


state 72

    (24) a -> ID CORCHETE_I CTEINT COMA . CTEINT CORCHETE_D

    CTEINT          shift and go to state 96


state 73

    (28) d -> COMA c d .

    PUNTO_COMA      reduce using rule 28 (d -> COMA c d .)


state 74

    (7) clases -> CLASS ID heren LLAVE_I contenido LLAVE_D PUNTO_COMA . nuevacl
    (16) nuevacl -> . clases
    (17) nuevacl -> . vacio
    (7) clases -> . CLASS ID heren LLAVE_I contenido LLAVE_D PUNTO_COMA nuevacl
    (8) clases -> . vacio
    (1) vacio -> .

    CLASS           shift and go to state 6
    VAR             reduce using rule 1 (vacio -> .)
    FUNC            reduce using rule 1 (vacio -> .)
    MAIN            reduce using rule 1 (vacio -> .)

    nuevacl                        shift and go to state 97
    clases                         shift and go to state 98
    vacio                          shift and go to state 99

state 75

    (4) bloque -> LLAVE_I estatutos . LLAVE_D

    LLAVE_D         shift and go to state 100


state 76

    (5) estatutos -> estatuto . estatutos
    (5) estatutos -> . estatuto estatutos
    (6) estatutos -> . vacio
    (48) estatuto -> . asignacion
    (49) estatuto -> . llamadaVoid
    (50) estatuto -> . retorno
    (51) estatuto -> . lectura
    (52) estatuto -> . escritura
    (53) estatuto -> . condicion
    (54) estatuto -> . cicloWhile
    (55) estatuto -> . cicloFor
    (1) vacio -> .
    (60) asignacion -> . variable IGUAL expresion PUNTO_COMA
    (61) llamadaVoid -> . ID PARENTESIS_I expresion I PARENTESIS_D
    (65) retorno -> . RETURN expresion PUNTO_COMA
    (64) lectura -> . READ variable
    (66) escritura -> . PRINT PARENTESIS_I j
    (71) condicion -> . IF PARENTESIS_I expresion PARENTESIS_D bloque l
    (74) cicloWhile -> . WHILE PARENTESIS_I expresion PARENTESIS_D bloque
    (75) cicloFor -> . FOR variable IGUAL expresion UNTIL bloque
    (56) variable -> . ID h

    LLAVE_D         reduce using rule 1 (vacio -> .)
    ID              shift and go to state 87
    RETURN          shift and go to state 88
    READ            shift and go to state 89
    PRINT           shift and go to state 90
    IF              shift and go to state 91
    WHILE           shift and go to state 92
    FOR             shift and go to state 93

    estatuto                       shift and go to state 76
    estatutos                      shift and go to state 101
    vacio                          shift and go to state 77
    asignacion                     shift and go to state 78
    llamadaVoid                    shift and go to state 79
    retorno                        shift and go to state 80
    lectura                        shift and go to state 81
    escritura                      shift and go to state 82
    condicion                      shift and go to state 83
    cicloWhile                     shift and go to state 84
    cicloFor                       shift and go to state 85
    variable                       shift and go to state 86

state 77

    (6) estatutos -> vacio .

    LLAVE_D         reduce using rule 6 (estatutos -> vacio .)


state 78

    (48) estatuto -> asignacion .

    ID              reduce using rule 48 (estatuto -> asignacion .)
    RETURN          reduce using rule 48 (estatuto -> asignacion .)
    READ            reduce using rule 48 (estatuto -> asignacion .)
    PRINT           reduce using rule 48 (estatuto -> asignacion .)
    IF              reduce using rule 48 (estatuto -> asignacion .)
    WHILE           reduce using rule 48 (estatuto -> asignacion .)
    FOR             reduce using rule 48 (estatuto -> asignacion .)
    LLAVE_D         reduce using rule 48 (estatuto -> asignacion .)


state 79

    (49) estatuto -> llamadaVoid .

    ID              reduce using rule 49 (estatuto -> llamadaVoid .)
    RETURN          reduce using rule 49 (estatuto -> llamadaVoid .)
    READ            reduce using rule 49 (estatuto -> llamadaVoid .)
    PRINT           reduce using rule 49 (estatuto -> llamadaVoid .)
    IF              reduce using rule 49 (estatuto -> llamadaVoid .)
    WHILE           reduce using rule 49 (estatuto -> llamadaVoid .)
    FOR             reduce using rule 49 (estatuto -> llamadaVoid .)
    LLAVE_D         reduce using rule 49 (estatuto -> llamadaVoid .)


state 80

    (50) estatuto -> retorno .
